Reingreso de datos

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ CI_ENVIRONMENT = development
 # app.baseURL = 'http://localhost/nombredelasubcarpeta/nit104/public'
 #--------------------------------------------------------------------
 
-app.baseURL = 'https://ticket-manager-nti.azurewebsites.net'
+app.baseURL = 'http://localhost/proyectos/nit104/public'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -74,4 +74,3 @@ app.baseURL = 'https://ticket-manager-nti.azurewebsites.net'
 #--------------------------------------------------------------------
 
 # logger.threshold = 4
-
